bk_ida/gobmkida/g3/result_to_string
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/result_to_string/src/engine/printutils.c:860:27: error: use of undeclared identifier 'CSWTCH_50'
return ( const char *)*( &CSWTCH_50 + ( unsigned int)result); 
                          ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/result_to_string/src/obj/1/printutils.o] Error 1
